Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -37,7 +37,7 @@
   "mn95:8.1": "„Tegul gerbiamas Čianki neina pamatyti atsiskyrėlio Gotamos.",
   "mn95:8.2": "Nedera gerbiamam Čianki eiti pamatyti atsiskyrėlį Gotamą.",
   "mn95:8.3": "Tai atsiskyrėliui Gotamai dera eiti pamatyti gerbiamą Čiankį.",
-  "mn95:8.4": "Juk gerbiamas Čianki yra gero gimimo iš abiejų pusių, septynios jo protėvių kartos ir pagal motinos, ir pagal tėvo liniją yra tyros kilmės, jo kilmė yrа be trūkumų, nepriekaištinga.",
+  "mn95:8.4": "Juk gerbiamas Čianki yra gero gimimo iš abiejų pusių: septynios jo protėvių kartos, ir pagal motinos, ir pagal tėvo liniją, yra tyros kilmės, jo kilmė yrа be trūkumų, nepriekaištinga.",
   "mn95:8.5": "Ir dėl to, kad gerbiamas Čianki yra gero gimimo iš abiejų pusių, septynios jo protėvių kartos ir pagal motinos, ir pagal tėvo liniją yra tyros kilmės, jo kilmė yrа be trūkumų, nepriekaištinga, gerbiamam Čianki nedera eiti pamatyti atsiskyrėlį Gotamą.",
   "mn95:8.6": "Tai atsiskyrėliui Gotamai dera eiti pamatyti gerbiamą Čiankį.",
   "mn95:8.7": "Juk gerbiamas Čianki yra pasiturintis, turtingas, lobingas …",
