Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -41,7 +41,7 @@
   "mn95:8.5": "Ir dėl to, kad gerbiamas Čianki yra gero gimimo iš abiejų pusių: septynios jo protėvių kartos, ir pagal motinos liniją, ir pagal tėvo, yra tyros kilmės, jo kilmė yrа be trūkumų, nepriekaištinga, gerbiamam Čianki nedera eiti pamatyti atsiskyrėlį Gotamą.",
   "mn95:8.6": "Tai atsiskyrėliui Gotamai dera eiti pamatyti gerbiamą Čiankį.",
   "mn95:8.7": "Juk gerbiamas Čianki yra pasiturintis, turtingas, lobingas …",
-  "mn95:8.8": "Juk gerbiamas Čianki yra trijų Vėdų su jų žodynu, apeigomis, tarimu, etimologija ir penktuoju (atžvilgiu) – istorija žinovas; jis išmano eiles, gramatiką ir yra filosofavimo ir Didžiojo žmogaus požymių (atpažinimo) meistras.",
+  "mn95:8.8": "Juk gerbiamas Čianki yra trijų Vėdų žinovas su jų žodynu, apeigomis, tarimu, etimologija ir penktuoju (atžvilgiu) – istorija; jis išmano eiles, gramatiką ir yra filosofavimo ir Didžiojo žmogaus požymių (atpažinimo) meistras.",
   "mn95:8.9": "Juk gerbiamas Čianki yra gražus, patrauklus, mielas, yra apdovanotas neprilygstama išvaizda, dieviško grožio, dieviško sudėjimo, (tokius kaip jis) matyti yra nepaprasta sėkmė.",
   "mn95:8.10": "Juk gerbiamas Čianki yra doras, brandaus elgesio, apdovanotas brandžiu elgesiu …",
   "mn95:8.11": "Juk gerbiamas Čianki yra gražbylys, iškalbus, apdovanotas galantiška iškalba, (jo žodžiai yra) aiškūs, nepriekaištingi ir prasmingi …",
