Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -49,7 +49,7 @@
   "mn95:8.13": "Juk pats karalius Pasėnadi rodo pagarbą, gerbia, aukština, garbina, šlovina gerbiamą Čiankį …",
   "mn95:8.14": "Juk pats brahmanas Pokharasati rodo pagarbą, gerbia, aukština, garbina, šlovina gerbiamą Čiankį …",
   "mn95:8.15": "Juk brahmanas Čianki gyvena Opasadoje valdydamas ją, su daugybe žmonių, gausybe žolės (gyvuliams), medienos, vandens telkinių, grūdų, karališko turto, šventų Kosalos karaliaus, Pasėnadžio įteiktų dovanų. ",
-  "mn95:8.16": "Ir tam brahmanui Čianki, kuris gyvena Opasadoje valdydamas ją, su daugybe žmonių, su gausybe žolės (gyvuliams), medienos, vandens telkinių, grūdų, su karališkais turtais, šventomis Kosalos karaliaus Pasėnadžio įteiktomis dovanomis, jam nedera eiti pamatyti atsiskyrėlį Gotamą.",
+  "mn95:8.16": "Ir tam brahmanui Čianki, kuris gyvena Opasadoje valdydamas ją, su daugybe žmonių, su gausybe žolės (gyvuliams), medienos, vandens telkinių, grūdų, su karališkais turtais, šventomis Kosalos karaliaus Pasėnadžio įteiktomis dovanomis, jam nedera eiti pamatyti atsiskyrėlio Gotamos.",
   "mn95:8.17": "Tai atsiskyrėliui Gotamai dera eiti pamatyti gerbiamą Čiankį.”",
   "mn95:9.1": "Kai tai buvo pasakyta, brahmanas Čianki pasakė tiems brahmanams:",
   "mn95:9.2": "„Ką gi, gerbiamieji, dabar paklausykite manęs, kodėl tai mums patiems dera eiti pamatyti atsiskyrėlį Gotamą, ",
