Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -53,7 +53,7 @@
   "mn95:8.17": "Tai atsiskyrėliui Gotamai dera eiti pamatyti gerbiamą Čiankį.”",
   "mn95:9.1": "Kai tai buvo pasakyta, brahmanas Čianki pasakė tiems brahmanams:",
   "mn95:9.2": "„Ką gi, gerbiamieji, dabar paklausykite manęs, kodėl tai mums patiems dera eiti pamatyti atsiskyrėlį Gotamą, ",
-  "mn95:9.3": "o atsiskyrėliui Gotamai nedera eiti pamatyti mus.",
+  "mn95:9.3": "o atsiskyrėliui Gotamai nedera eiti pamatyti mūsų.",
   "mn95:9.4": "Išties, gerbiamieji, atsiskyrėlis Gotama yra gero gimimo iš abiejų pusių: septynios jo protėvių kartos, ir pagal motinos liniją, ir pagal tėvo, yra tyros kilmės, jo kilmė yrа be trūkumų, nepriekaištinga.",
   "mn95:9.5": "Ir dėl to, kad atsiskyrėlis Gotama yra gero gimimo iš abiejų pusių: septynios jo protėvių kartos ir pagal motinos liniją, ir pagal tėvo yra tyros kilmės, jo kilmė yrа be trūkumų, nepriekaištinga, gerbiamam Gotamai nedera eiti pamatyti mus.",
   "mn95:9.6": "Tai mums dera eiti pamatyti gerbiamą Gotamą.",
