--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -91,7 +91,7 @@
   "mn95:10.1": "Ir štai brahmanas Čianki su dideliu brahmanų būriu nuėjo pas Palaimintąjį. Atėjęs apsikeitė su Palaimintuoju mandagiais sveikinimais.",
   "mn95:10.2": "Apsikeitęs mandagiais sveikinimais ir draugiškais žodžiais jis atsisėdo iš šono. ",
   "mn95:11.1": "Tuo metu Palaimintasis sėdėjo apsikeitinėdamas mandagiais sveikinimais ir draugiškais žodžiais tai su vienu, tai su kiti senu brahmanu. ",
-  "mn95:11.2": "Tuo pačiu metu susirinkusiųjų tarpe sėdėjo brahmanas jaunuolis Kapatika. Jam buvo šešiolika metų, galva jo buvo nuskusta. Jis buvo trijų Vėdų su jų žodynu, apeigomis, tarimu, etimologija ir penktuoju (atžvilgiu) – istorija žinovas. Jis išmanė eiles, gramatiką ir buvo filosofavimo ir Didžiojo žmogaus požymių (atpažinimo) meistras.",
+  "mn95:11.2": "Tuo pačiu metu susirinkusiųjų tarpe sėdėjo brahmanas jaunuolis Kapatika. Jam buvo šešiolika metų, galva jo buvo nuskusta. Jis buvo trijų Vėdų žinovas su jų žodynu, apeigomis, tarimu, etimologija ir penktuoju (atžvilgiu) – istorija. Jis išmanė eiles, gramatiką ir buvo filosofavimo ir Didžiojo žmogaus požymių (atpažinimo) meistras.",
   "mn95:11.3": "Palaimintajam besikalbant tai su vienu, tai su kitu senu brahmanu jis vis įsiterpdavo į pokalbį.",
   "mn95:11.4": "Ir štai Palaimintasis papeikė jaunuolį brahmaną Kapatiką:",
   "mn95:11.5": "„Gerbiamas Bharadvadžia, neįsiterpinėki į pokalbi, kai kalbama su senais brahmanais.",
