--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -158,7 +158,7 @@
   "mn95:15.3": "„Jei, Bharadvadžia, žmogus turi tikėjimą,",
   "mn95:15.4": "sakydamas „aš taip tikiu”,",
   "mn95:15.5": "užuot buvęs visiškai įsitikinusiu, kad",
-  "mn95:15.6": "tik tai yra tiesa, visa kita yra klaidinga.",
+  "mn95:15.6": "tik tai yra tiesa, visa kita yra klaidinga, jis saugo tiesą.",
   "mn95:15.7": "Jei, Bharadvadžia, kažkas žmogui yra patrauklu …",
   "mn95:15.8": "Jei, Bharadvadžia, žmogus priklauso tradicijai …",
   "mn95:15.9": "Jei, Bharadvadžia, žmogus yra apsvarstęs įrodymus …",
