Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -164,7 +164,7 @@
   "mn95:15.9": "Jei, Bharadvadžia, žmogus yra apsvarstęs įrodymus …",
   "mn95:15.10": "„Jei, Bharadvadžia, žmogus priėmė požiūrį po apmąstymo,",
   "mn95:15.11": "sakydamas „aš priėmiau tokį požiūrį po apmąstymo”,",
-  "mn95:15.12": "jis saugo tiesą, užuot buvęs visiškai įsitikinusiu, kad",
+  "mn95:15.12": "užuot buvęs visiškai įsitikinusiu, kad",
   "mn95:15.13": "tik tai yra tiesa, visa kita yra klaidinga.",
   "mn95:15.14": "Štai taip, Bharadvadžia, yra nusakomas tiesos saugojimas, taip tiesa yra išsaugojama. Taip mes paaiškiname tiesos saugojimą,",
   "mn95:15.15": "bet tai dar nėra tiesos supratimas.”",
