--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -168,7 +168,7 @@
   "mn95:15.13": "tik tai yra tiesa, visa kita yra klaidinga, jis saugo tiesą.",
   "mn95:15.14": "Štai taip, Bharadvadžia, yra nusakomas tiesos saugojimas, taip tiesa yra išsaugojama. Taip mes paaiškiname tiesos saugojimą,",
   "mn95:15.15": "bet tai dar nėra tiesos supratimas.”",
-  "mn95:16.1": "Taip, Gerbiamas Gotama, yra nusakomas tiesos saugojimas. Mes matome tame tiesos išsaugojimą. ",
+  "mn95:16.1": "„Taip, Gerbiamas Gotama, yra nusakomas tiesos saugojimas. Mes matome tame tiesos išsaugojimą. ",
   "mn95:16.2": "Bet, Gerbiamas Gotama, kaip nusakomas tiesos supratimas, kaip tiesa yra suprantama?",
   "mn95:16.3": "Klausiame Gerbiamojo Gotamos apie tiesos supratimą.”",
   "mn95:17.1": "„Štai, Bharadvadžia, palaikomas kažkokio kaimo ar miesto gyvena vienuolis.",
