Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -109,7 +109,7 @@
   "mn95:12.8": "„Atsiskyrėlis Gotama yra nukreipęs į mane dėmesį.",
   "mn95:12.9": "Kodėl man neuždavus jam klausimo?”",
   "mn95:12.10": "Ir štai jaunuolis brahmanas Kapatika tarė: ",
-  "mn95:12.11": "„Gerbiamas Gotama, apie tas senųjų brahmanų šventąsias Vėdų giesmes, kurios perduodamos žodžiu ir yra kanoninės, brahmanai yra visiškai įsitikinę, kad",
+  "mn95:12.11": "„Gerbiamasis Gotama, apie tas senųjų brahmanų šventąsias Vėdų giesmes, kurios perduodamos žodžiu ir yra kanoninės, brahmanai yra visiškai įsitikinę, kad",
   "mn95:12.12": "tik tai yra tiesa, visa kita yra klaidinga.",
   "mn95:12.13": "Ką Gerbiamas Gotama pasakys apie tai?”",
   "mn95:13.1": "„Na bet, Bharadvadžia, ar yra tarp brahmanų nors vienas brahmanas, kuris sako:",
