Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -138,7 +138,7 @@
   "mn95:13.24": "Lygiai gi taip pat, Bharadvadžia, išeina, kad brahmanų pasakymas, sakyčiau, yra panašus į neregių virtinę: pirmasis jų nemato, viduriniai nemato, ir paskutinysis taip pat nemato.",
   "mn95:13.25": "Kaip manai, Bharadvadžia, ",
   "mn95:13.26": "Jei taip jau yra, ar neišeina, kad brahmanų tikėjimas yra nepagrįstas?”",
-  "mn95:14.1": "„Brahmanai, Gerbiamas Gotama, ne tik iš tikėjimo tai garbina, bet ir dėl žodinio perdavimo tradicijos.”",
+  "mn95:14.1": "„Brahmanai, Gerbiamasis Gotama, ne tik iš tikėjimo tai garbina, bet ir dėl žodinio perdavimo tradicijos.”",
   "mn95:14.2": "„Pirmą tu, Bharadvadžia, rėmeisi tikėjimu, o dabar kalbi apie tradiciją.",
   "mn95:14.3": "Yra penki dalykai, Bharadvadžia, kurie čia ir dabar gali turėti dvejopą rezultatą.",
   "mn95:14.4": "Kokie penki? ",
