--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -153,7 +153,7 @@
   "mn95:14.13": "Nors ir nebūtų kažkoks požiūris priimtas po apmąstymo, tai gali būti realu, tikra, teisinga. ",
   "mn95:14.14": "Protingam žmogui, kuris saugo tiesą, nedera būti visiškai įsitikinusiu, kad",
   "mn95:14.15": "tik tai yra tiesa, visa kita yra klaidinga.”",
-  "mn95:15.1": "„Bet, Gerbiamas Gotama, kaip nusakomas tiesos saugojimas, kaip tiesa yra išsaugojama?",
+  "mn95:15.1": "„Bet, Gerbiamasis Gotama, kaip nusakomas tiesos saugojimas, kaip tiesa yra išsaugojama?",
   "mn95:15.2": "Klausiame Gerbiamojo Gotamos apie tiesos saugojimą.”",
   "mn95:15.3": "„Jei, Bharadvadžia, žmogus turi tikėjimą,",
   "mn95:15.4": "sakydamas „aš taip tikiu”,",
