Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -210,7 +210,7 @@
   "mn95:20.2": "jis įtiki juo, tikėdamas, jis nueina pas tą (mokytoją). Nuėjęs, jis laikosi arti jo; laikydamasis arti, jis klausosi; klausydamasis, jis išgirsta mokymą, išgirdęs mokymą, jis įsimena jį. Jis tyrinėja įsiminto mokymo prasmę; tyrinėdamas prasmę, apmąstęs, jis priima mokymą. Priėmus mokymą po apmąstymo, kyla noras veikti; kilus norui veikti, jis deda pastangas. Įdėjęs pastangų, jis tikrina; patikrinęs, jis atkakliai stengiasi; atkakliai stengdamasis, jis pats tiesiogiai patiria aukščiausią tiesą ir, perpratęs išmintimi, mato ją.",
   "mn95:20.3": "Štai taip, Bharadvadžia, yra nusakomas tiesos supratimas, taip tiesa yra suprantama. Taip mes paaiškiname tiesos supratimą,",
   "mn95:20.4": "bet tai dar nėra tiesos pasiekimas.”",
-  "mn95:21.1": "„Taip, Gerbiamas Gotama, yra nusakomas tiesos supratimas. Mes matome tame tiesos supratimą. ",
+  "mn95:21.1": "„Taip, Gerbiamasis Gotama, yra nusakomas tiesos supratimas. Mes matome tame tiesos supratimą. ",
   "mn95:21.2": "Bet, Gerbiamas Gotama, kaip nusakomas tiesos pasiekimas, kaip tiesa yra pasiekiama?",
   "mn95:21.3": "Klausiame Gerbiamojo Gotamos apie tiesos pasiekimą.”",
   "mn95:21.4": "„Tų pačių dalykų, Bharadvadžia, kartojimas, lavinimas, puoselėjimas (nulemia) tiesos pasiekimą.",
