--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -222,7 +222,7 @@
   "mn95:22.5": "Be atkaklaus stengimosi nepasieksi tiesos,",
   "mn95:22.6": "bet dėl to, kad yra atkakliai stengiamasi, tiesą yra pasiekiama. ",
   "mn95:22.7": "Tad atkaklus stengimasis ypač padeda pasiekti tiesą.”",
-  "mn95:23.1": "„Bet, Gerbiamas Gotama, koks dalykas ypač padeda atkakliai stengtis? ",
+  "mn95:23.1": "„Bet, Gerbiamasis Gotama, koks dalykas ypač padeda atkakliai stengtis? ",
   "mn95:23.2": "Klausiame Gerbiamojo Gotamos apie dalyką ypač padedantį atkakliai stengtis.”",
   "mn95:23.3": "„Ypač padeda atkakliai stengtis, Bharadvadžia, tikrinimas.",
   "mn95:23.4": "Be tikrinimo atkakliai nesistengsi,",
