Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -228,7 +228,7 @@
   "mn95:23.4": "Be tikrinimo atkakliai nesistengsi,",
   "mn95:23.5": "bet dėl to, kad yra tikrinama, atkakliai stengiamasi. ",
   "mn95:23.6": "Tad tikrinimas ypač padeda atkakliai stengtis.”",
-  "mn95:24.1": "„Bet, Gerbiamas Gotama, koks dalykas ypač padeda tikrinti? ",
+  "mn95:24.1": "„Bet, Gerbiamasis Gotama, koks dalykas ypač padeda tikrinti? ",
   "mn95:24.2": "Klausiame Gerbiamojo Gotamos apie dalyką ypač padedantį tikrinti.”",
   "mn95:24.3": "„Ypač padeda tikrinti, Bharadvadžia, pastangų dėjimas.",
   "mn95:24.4": "Be pastangų dėjimo netikrinsi,",
