Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -234,7 +234,7 @@
   "mn95:24.4": "Be pastangų dėjimo netikrinsi,",
   "mn95:24.5": "bet dėl to, kad dedamos pastangos, tikrinama.",
   "mn95:24.6": "Tad pastangų dėjimas ypač padeda tikrinti.”",
-  "mn95:25.1": "„Bet, Gerbiamas Gotama, koks dalykas ypač padeda dėti pastangas? ",
+  "mn95:25.1": "„Bet, Gerbiamasis Gotama, koks dalykas ypač padeda dėti pastangas? ",
   "mn95:25.2": "Klausiame Gerbiamojo Gotamos apie dalyką ypač padedantį dėti pastangas.”",
   "mn95:25.3": "„Ypač padeda dėti pastangas, Bharadvadžia, noras veikti.",
   "mn95:25.4": "Be noro veikti, nedėsi pastangų,",
