Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -240,7 +240,7 @@
   "mn95:25.4": "Be noro veikti, nedėsi pastangų,",
   "mn95:25.5": "bet dėl to, kad yra noras veikti, yra dedamos pastangos.",
   "mn95:25.6": "Tad noras veikti ypač padeda dėti pastangas.”",
-  "mn95:26.1": "„Bet, Gerbiamas Gotama, koks dalykas ypač padeda norėti veikti? ",
+  "mn95:26.1": "„Bet, Gerbiamasis Gotama, koks dalykas ypač padeda norėti veikti? ",
   "mn95:26.2": "Klausiame Gerbiamojo Gotamos apie dalyką ypač padedantį norėti veikti.”",
   "mn95:26.3": "„Ypač padeda norėti veikti, Bharadvadžia, mokymo priėmimas po apmąstymo.",
   "mn95:26.4": "Be mokymo priėmimo po apmąstymo, nekils noras veikti,",
