Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -246,7 +246,7 @@
   "mn95:26.4": "Be mokymo priėmimo po apmąstymo, nekils noras veikti,",
   "mn95:26.5": "bet dėl mokymo priėmimo po apmąstymo, kyla noras veikti.",
   "mn95:26.6": "Tad mokymo priėmimas po apmąstymo ypač padeda norėti veikti.”",
-  "mn95:27.1": "„Bet, Gerbiamas Gotama, koks dalykas ypač padeda priimti mokymą po apmąstymo?",
+  "mn95:27.1": "„Bet, Gerbiamasis Gotama, koks dalykas ypač padeda priimti mokymą po apmąstymo?",
   "mn95:27.2": "Klausiame Gerbiamojo Gotamos apie dalyką ypač padedantį priimti mokymą po apmąstymo.”",
   "mn95:27.3": "„Ypač padeda priimti mokymą po apmąstymo, Bharadvadžia, prasmės tyrinėjimas.",
   "mn95:27.4": "Be prasmės tyrinėjimo, nepriimsi mokymo po apmąstymo,",
