Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -252,7 +252,7 @@
   "mn95:27.4": "Be prasmės tyrinėjimo, nepriimsi mokymo po apmąstymo,",
   "mn95:27.5": "bet dėl prasmės tyrinėjimo, mokymas priimamas po apmąstymo.",
   "mn95:27.6": "Tad prasmės tyrinėjimas ypač padeda priimti mokymą po apmąstymo.”",
-  "mn95:28.1": "„Bet, Gerbiamas Gotama, koks dalykas ypač padeda tyrinėti prasmę?",
+  "mn95:28.1": "„Bet, Gerbiamasis Gotama, koks dalykas ypač padeda tyrinėti prasmę?",
   "mn95:28.2": "Klausiame Gerbiamojo Gotamos apie dalyką ypač padedantį tyrinėti prasmę.”",
   "mn95:28.3": "„Ypač padeda tyrinėti prasmę, Bharadvadžia, mokymo įsiminimas.",
   "mn95:28.4": "Be mokymo įsiminimo prasmės netyrinėsi,",
