--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -258,7 +258,7 @@
   "mn95:28.4": "Be mokymo įsiminimo prasmės netyrinėsi,",
   "mn95:28.5": "bet dėl to, kad mokymas įsiminamas, tyrinėjama prasmė.",
   "mn95:28.6": "Tad mokymo įsiminimas ypač padeda tyrinėti prasmę.”",
-  "mn95:29.1": "„Bet, Gerbiamas Gotama, koks dalykas ypač padeda įsiminti mokymą?",
+  "mn95:29.1": "„Bet, Gerbiamasis Gotama, koks dalykas ypač padeda įsiminti mokymą?",
   "mn95:29.2": "Klausiame Gerbiamojo Gotamos apie dalyką ypač padedantį įsiminti mokymą.”",
   "mn95:29.3": "„Ypač padeda įsiminti mokymą, Bharadvadžia, mokymo išgirdimas.",
   "mn95:29.4": "Neišgirdus mokymo, mokymo neįsiminsi,",
