--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -264,7 +264,7 @@
   "mn95:29.4": "Neišgirdus mokymo, mokymo neįsiminsi,",
   "mn95:29.5": "bet dėl to, kad mokymas išgirstamas, mokymas įsiminamas.",
   "mn95:29.6": "Tad mokymo išgirdimas ypač padeda įsiminti mokymą.”",
-  "mn95:30.1": "„Bet, Gerbiamas Gotama, koks dalykas ypač padeda išgirsti mokymą?",
+  "mn95:30.1": "„Bet, Gerbiamasis Gotama, koks dalykas ypač padeda išgirsti mokymą?",
   "mn95:30.2": "Klausiame Gerbiamojo Gotamos apie dalyką ypač padedantį išgirsti mokymą.”",
   "mn95:30.3": "„Ypač padeda išgirsti mokymą, Bharadvadžia, klausymasis.",
   "mn95:30.4": "Be klausymosi, mokymo neišgirsi,",
