Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -270,7 +270,7 @@
   "mn95:30.4": "Be klausymosi, mokymo neišgirsi,",
   "mn95:30.5": "bet dėl to, kad klausomasi, mokymas išgirstamas.",
   "mn95:30.6": "Tad klausimasis ypač padeda išgirsti mokymą.”",
-  "mn95:31.1": "„Bet, Gerbiamas Gotama, koks dalykas ypač padeda klausytis?",
+  "mn95:31.1": "„Bet, Gerbiamasis Gotama, koks dalykas ypač padeda klausytis?",
   "mn95:31.2": "Klausiame Gerbiamojo Gotamos apie dalyką ypač padedantį klausytis.”",
   "mn95:31.3": "„Ypač padeda klausytis, Bharadvadžia, laikymasis arti (mokytojo).",
   "mn95:31.4": "Be laikymosi arti, nesiklausysi,",
