--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -55,7 +55,7 @@
   "mn95:9.2": "„Ką gi, gerbiamieji, dabar paklausykite manęs, kodėl tai mums patiems dera eiti pamatyti atsiskyrėlį Gotamą, ",
   "mn95:9.3": "o atsiskyrėliui Gotamai nedera eiti pamatyti mūsų.",
   "mn95:9.4": "Išties, gerbiamieji, atsiskyrėlis Gotama yra gero gimimo iš abiejų pusių: septynios jo protėvių kartos, ir pagal motinos liniją, ir pagal tėvo, yra tyros kilmės, jo kilmė yrа be trūkumų, nepriekaištinga.",
-  "mn95:9.5": "Ir dėl to, kad atsiskyrėlis Gotama yra gero gimimo iš abiejų pusių: septynios jo protėvių kartos ir pagal motinos liniją, ir pagal tėvo yra tyros kilmės, jo kilmė yrа be trūkumų, nepriekaištinga, gerbiamam Gotamai nedera eiti pamatyti mūsų.",
+  "mn95:9.5": "Ir dėl to, kad atsiskyrėlis Gotama yra gero gimimo iš abiejų pusių: septynios jo protėvių kartos ir pagal motinos liniją, ir pagal tėvo yra tyros kilmės, jo kilmė yrа be trūkumų, nepriekaištinga, gerbiamajam Gotamai nedera eiti pamatyti mūsų.",
   "mn95:9.6": "Tai mums dera eiti pamatyti gerbiamą Gotamą.",
   "mn95:9.7": "Išties, gerbiamieji, atsiskyrėlis Gotama žengė priekyn iš namų palikdamas gausybę aukso laikomo rūsiuose ir rūmuose …",
   "mn95:9.8": "Išties, gerbiamieji, atsiskyrėlis Gotama žengė priekyn iš namų į benamį gyvenimą būdamas jaunas, pačiame jaunume, būdamas juodaplaukis, apdovanotas jaunystės palaima, gyvenimo pradžioje …",
