--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -81,7 +81,7 @@
   "mn95:9.28": "Svečiams gi mes turime rodyti pagarbą, gerbti, aukštinti, garbinti juos.",
   "mn95:9.29": "Ir tas atsiskyrėlis Gotama, kuris užsuko į Kosalos brahmanų kaimą Opasadą ir yra apsistojęs salos medžių giraitėje „Dievų giraitė” netoli Opasados, į šiaurę nuo kaimo, tas atsiskyrėlis Gotama yra mūsų svečias.",
   "mn95:9.30": "Svečiams gi mes turime rodyti pagarbą, gerbti, aukštinti, garbinti juos.",
-  "mn95:9.31": "Todėl gerbiamam Gotamai nedera eiti pamatyti mūsų.",
+  "mn95:9.31": "Todėl gerbiamajam Gotamai nedera eiti pamatyti mūsų.",
   "mn95:9.32": "Tai mums dera eiti pamatyti gerbiamą Gotamą.",
   "mn95:9.33": "Apie tiek, gerbiamieji, Gerbiamo Gotamos grožybių aš esu pramokęs, bet Gerbiamo Gotamos grožybių yra daugiau.",
   "mn95:9.34": "Išties Gerbiamo Gotamos grožybių neišmatuosi.",
