Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -85,7 +85,7 @@
   "mn95:9.32": "Tai mums dera eiti pamatyti gerbiamą Gotamą.",
   "mn95:9.33": "Apie tiek, gerbiamieji, Gerbiamo Gotamos grožybių aš esu pramokęs, bet Gerbiamo Gotamos grožybių yra daugiau.",
   "mn95:9.34": "Išties Gerbiamo Gotamos grožybių neišmatuosi.",
-  "mn95:9.35": "Ir dėl to, kad jis yra apdovanotas visais šiais bruožais, gerbiamam Gotamai nedera eiti pamatyti mus.",
+  "mn95:9.35": "Ir dėl to, kad jis yra apdovanotas visais šiais bruožais, gerbiamajam Gotamai nedera eiti pamatyti mus.",
   "mn95:9.36": "Tai mums dera eiti pamatyti gerbiamą Gotamą.",
   "mn95:9.37": "„Ką gi, gerbiamieji, eime visi kartu pamatyti gerbiamą Gotamą.”",
   "mn95:10.1": "Ir štai brahmanas Čianki su dideliu brahmanų būriu nuėjo pas Palaimintąjį. Atėjęs apsikeitė su Palaimintuoju mandagiais sveikinimais.",
