--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -98,7 +98,7 @@
   "mn95:11.6": "Tegul gerbiamas Bharadvadžia palaukia, kol pokalbis baigsis.”",
   "mn95:11.7": "Kai tai buvo pasakyta, brahmanas Čianki pasakė Palaimintajam:",
   "mn95:11.8": "„Tegul Palaimintasis nepeikia jaunuolį brahmaną Kapatiką.",
-  "mn95:11.9": "Jaunuolis brahmanas Kapatika yra kilnios šeimos žmogus, jaunuolis brahmanas Kapatika yra išsimokslinęs, jaunuolis brahmanas Kapatika yra išminčius, jaunuolis brahmanas Kapatika yra iškalbus, jaunuolis brahmanas Kapatika geba dalyvauti diskusijoje su gerbiamu Gotama.”",
+  "mn95:11.9": "Jaunuolis brahmanas Kapatika yra kilnios šeimos žmogus, jaunuolis brahmanas Kapatika yra išsimokslinęs, jaunuolis brahmanas Kapatika yra išminčius, jaunuolis brahmanas Kapatika yra iškalbus, jaunuolis brahmanas Kapatika geba dalyvauti diskusijoje su gerbiamuoju Gotama.”",
   "mn95:12.1": "Ir štai Palaimintasis pagalvojo:",
   "mn95:12.2": "„Tikrai, jaunuolis brahmanas Kapatika kalbės apie trijų Vėdų mokymą. ",
   "mn95:12.3": "Dėl to brahmanai ir bando jį prastumti.”",
