Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -115,7 +115,7 @@
   "mn95:13.1": "„Na bet, Bharadvadžia, ar yra tarp brahmanų nors vienas brahmanas, kuris sako:",
   "mn95:13.2": "„Aš žinau Tai, aš matau Tai.",
   "mn95:13.3": "Tik Tai yra tiesa, visa kita yra klaidinga.”",
-  "mn95:13.4": "„Tai kad ne, Gerbiamas Gotama.”",
+  "mn95:13.4": "„Tai kad ne, Gerbiamasis Gotama.”",
   "mn95:13.5": "„Na bet, Bharadvadžia, ar yra tarp brahmanų nors vienas mokytojas, nors vienas mokytojų mokytojas iki septynių mokytojų kartų atgal, kuris sakytų:",
   "mn95:13.6": "„Aš žinau Tai, aš matau Tai.",
   "mn95:13.7": "Tik Tai yra tiesa, visa kita yra klaidinga.”",
