--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -124,7 +124,7 @@
   "mn95:13.10": "ar jie sakė:",
   "mn95:13.11": "„Mes žinome Tai, mes matome Tai.",
   "mn95:13.12": "Tik Tai yra tiesa, visa kita yra klaidinga.”",
-  "mn95:13.13": "„Tai kad ne, Gerbiamas Gotama.”",
+  "mn95:13.13": "„Tai kad ne, Gerbiamasis Gotama.”",
   "mn95:13.14": "„Tad panašu, Bharadvadžia, kad tarp brahmanų nėra nei vieno brahmano, kuris sako:",
   "mn95:13.15": "„Aš žinau Tai, aš matau Tai.",
   "mn95:13.16": "Tik Tai yra tiesa, visa kita yra klaidinga.”",
