--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -94,7 +94,7 @@
   "mn95:11.2": "Tuo pačiu metu susirinkusiųjų tarpe sėdėjo brahmanas jaunuolis Kapatika. Jam buvo šešiolika metų, galva jo buvo nuskusta. Jis buvo trijų Vėdų žinovas su jų žodynu, apeigomis, tarimu, etimologija ir penktuoju (atžvilgiu) – istorija. Jis išmanė eiles, gramatiką ir buvo filosofavimo ir Didžiojo žmogaus požymių (atpažinimo) meistras.",
   "mn95:11.3": "Palaimintajam besikalbant tai su vienu, tai su kitu senu brahmanu jis vis įsiterpdavo į pokalbį.",
   "mn95:11.4": "Ir štai Palaimintasis papeikė jaunuolį brahmaną Kapatiką:",
-  "mn95:11.5": "„Gerbiamas Bharadvadžia, neįsiterpinėki į pokalbi, kai kalbama su senais brahmanais.",
+  "mn95:11.5": "„Gerbiamasis Bharadvadžia, neįsiterpinėki į pokalbi, kai kalbama su senais brahmanais.",
   "mn95:11.6": "Tegul gerbiamas Bharadvadžia palaukia, kol pokalbis baigsis.”",
   "mn95:11.7": "Kai tai buvo pasakyta, brahmanas Čianki pasakė Palaimintajam:",
   "mn95:11.8": "„Tegul Palaimintasis nepeikia jaunuolį brahmaną Kapatiką.",
