--- a/translation/lt/piyadassi/sutta/sn/sn56/sn56.31_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn56/sn56.31_translation-lt-piyadassi.json
@@ -3,7 +3,7 @@
   "sn56.31:0.2": "4. Sysapos medžių giraitės skyrius",
   "sn56.31:0.3": "Sysapos medžių giraitė",
   "sn56.31:1.1": "Kartą Palaimintasis buvo apsistojęs Kosambyje _sysapos_ medžių giraitėje.",
-  "sn56.31:1.2": "Ir štai Palaimintasis, paėmes į ranką keletą _sysapos_ medžių lapų, kreipėsi į vienuolius:",
+  "sn56.31:1.2": "Ir štai Palaimintasis, paėmęs į ranką keletą _sysapos_ medžių lapų, kreipėsi į vienuolius:",
   "sn56.31:1.3": "„Kaip manote, vienuoliai, ",
   "sn56.31:1.4": "kas yra daugiau,",
   "sn56.31:1.5": "ar tas keletas lapų, kuriuos laikau rankoje, ar virš jų esantys (ant medžių augantys) _sysapos_ medžių giraitės lapai?”",
