Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn56/sn56.31_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn56/sn56.31_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn56/sn56.31_translation-lt-piyadassi.json
@@ -11,7 +11,7 @@
   "sn56.31:1.7": "žymiai daugiau yra virš jų (ant medžių augantys) _sysapos_ medžių giraitės lapai.”",
   "sn56.31:1.8": "„Lygiai gi, vienuoliai, taip, žymiai daugiau yra tai, ką aš tiesiogiai pažinau, bet ko neaiškinu. ",
   "sn56.31:1.9": "Ir kodėl, vienuoliai, aš to neaiškinu?",
-  "sn56.31:1.10": "Nagi, vienuoliia, tai neneša naudos, tai nesusiję su tyro švento gyvenimo pradais, tai neatveda nei prie nusivylimo, nei prie troškimo išblėsimo, nei prie baigties, nei prie ramybės, nei prie tiesioginio pažinimo, nei prie tobulo nušvitimo, nei prie Nibbanos.",
+  "sn56.31:1.10": "Nagi, vienuoliai, tai neneša naudos, tai nesusiję su tyro švento gyvenimo pradais, tai neatveda nei prie nusivylimo, nei prie troškimo išblėsimo, nei prie baigties, nei prie ramybės, nei prie tiesioginio pažinimo, nei prie tobulo nušvitimo, nei prie Nibbanos.",
   "sn56.31:1.11": "Todėl aš apie to neaiškinu.",
   "sn56.31:2.1": "O ką, vienuoliai, aš aiškinu?",
   "sn56.31:2.2": "„Tai yra kančia” – tai aš aiškinu; „Tai yra kančios šaltinis” – tai aš aiškinu, „Tai yra kančios baigtis” – tai aš aiškinu; „Tai yra kelias į kančios baigtį” – tai aš aiškinu.",
