Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn56/sn56.31_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn56/sn56.31_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn56/sn56.31_translation-lt-piyadassi.json
@@ -17,6 +17,6 @@
   "sn56.31:2.2": "„Tai yra kančia” – tai aš aiškinu; „Tai yra kančios šaltinis” – tai aš aiškinu, „Tai yra kančios baigtis” – tai aš aiškinu; „Tai yra kelias į kančios baigtį” – tai aš aiškinu.",
   "sn56.31:3.1": "Ir kodėl, vienuoliai, aš tai aiškinu?",
   "sn56.31:3.2": "Ogi, vienuoliai, tai neša naudą, tai yra susiję su tyro švento gyvenimo pradais, tai atveda prie nusivylimo, troškimo išblėsimo, baigties, ramybės, tiesioginio pažinimo, tobulo nušvitimo, prie _nibbanos_.",
-  "sn56.31:3.3": "Todėl aš apie tai aiškinu. ",
+  "sn56.31:3.3": "Todėl aš tai aiškinu. ",
   "sn56.31:4.1": "Todėl, vienuoliai, turi būti dedamos pastangos (suprasti), kad „tai yra kančia” … „tai yra kelias į kančios baigtį”."
 }
