--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -1,3 +1,4 @@
 {
-  "sn12.2:0.1": "Pagal temą susijusių suttų rinkinys 12"
+  "sn12.2:0.1": "Pagal temą susijusių suttų rinkinys 12",
+  "sn12.2:0.2": "1. Budos"
 }
