Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -2,5 +2,6 @@
   "sn12.2:0.1": "Pagal temą susijusių suttų rinkinys 12",
   "sn12.2:0.2": "1. Budos",
   "sn12.2:0.3": "2. Nagrinėjimas ",
-  "sn12.2:1.1": "Palaimintasis buvo apsistojęs netoli Savatthi."
+  "sn12.2:1.1": "Palaimintasis buvo apsistojęs netoli Savatthi.",
+  "sn12.2:1.2": "„Vienuoliai, mokysiu jus sąlygotosios kylmės, išnagrinėsiu (ją). "
 }
