--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -7,5 +7,6 @@
   "sn12.2:1.3": "To klausykite, sutelkite visą dėmesį, aš kalbėsiu.” ",
   "sn12.2:1.4": "„Taip, Garbusis,” – atsakė Palaimintajam tie vienuoliai.",
   "sn12.2:1.5": "Palaimintasis štai ką pasakė: ",
-  "sn12.2:2.1": "„Ir kokia, vienuoliai, yra sąlygotoji kilmė?”"
+  "sn12.2:2.1": "„Ir kokia, vienuoliai, yra sąlygotoji kilmė?”",
+  "sn12.2:2.2": "Sąlygoti neišmanymo, vienuoliai, yra valingi veiksmai."
 }
