--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -9,5 +9,6 @@
   "sn12.2:1.5": "Palaimintasis štai ką pasakė: ",
   "sn12.2:2.1": "„Ir kokia, vienuoliai, yra sąlygotoji kilmė?”",
   "sn12.2:2.2": "Sąlygoti neišmanymo, vienuoliai, yra valingi veiksmai.",
-  "sn12.2:2.3": "Sąlygota valingų veiksmų yra sąmonė."
+  "sn12.2:2.3": "Sąlygota valingų veiksmų yra sąmonė.",
+  "sn12.2:2.4": "Sąlygoti sąmonės yra vardas ir pavidalas (protas ir materija)."
 }
