--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -11,5 +11,6 @@
   "sn12.2:2.2": "Sąlygoti neišmanymo, vienuoliai, yra valingi veiksmai.",
   "sn12.2:2.3": "Sąlygota valingų veiksmų yra sąmonė.",
   "sn12.2:2.4": "Sąlygoti sąmonės yra vardas ir pavidalas (protas ir materija).",
-  "sn12.2:2.5": "Sąlygotos vardo ir pavidalo yra šešios patyrimo sritys."
+  "sn12.2:2.5": "Sąlygotos vardo ir pavidalo yra šešios patyrimo sritys.",
+  "sn12.2:2.6": "Sąlygotas šešių patyrimo sričių yra sąlytis."
 }
