--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -13,5 +13,6 @@
   "sn12.2:2.4": "Sąlygoti sąmonės yra vardas ir pavidalas (protas ir materija).",
   "sn12.2:2.5": "Sąlygotos vardo ir pavidalo yra šešios patyrimo sritys.",
   "sn12.2:2.6": "Sąlygotas šešių patyrimo sričių yra sąlytis.",
-  "sn12.2:2.7": "Sąlygotas sąlyčio yra jausmo tonas."
+  "sn12.2:2.7": "Sąlygotas sąlyčio yra jausmo tonas.",
+  "sn12.2:2.8": "Sąlygotas jausmo tono yra troškimas."
 }
