Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -15,5 +15,6 @@
   "sn12.2:2.6": "Sąlygotas šešių patyrimo sričių yra sąlytis.",
   "sn12.2:2.7": "Sąlygotas sąlyčio yra jausmo tonas.",
   "sn12.2:2.8": "Sąlygotas jausmo tono yra troškimas.",
-  "sn12.2:2.9": "Sąlygotas troškimo yra savinimasis."
+  "sn12.2:2.9": "Sąlygotas troškimo yra savinimasis.",
+  "sn12.2:2.10": "Sąlygota savinimosi yra būtis."
 }
