--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -17,5 +17,6 @@
   "sn12.2:2.8": "Sąlygotas jausmo tono yra troškimas.",
   "sn12.2:2.9": "Sąlygotas troškimo yra savinimasis.",
   "sn12.2:2.10": "Sąlygota savinimosi yra būtis.",
-  "sn12.2:2.11": "Sąlygotas būties yra gimimas."
+  "sn12.2:2.11": "Sąlygotas būties yra gimimas.",
+  "sn12.2:2.12": "Sąlygotas gimimo yra senėjimo, mirties, liūdesio, raudojimo, skausmo, nusiminimo ir nevilties radimasis."
 }
