--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -19,5 +19,6 @@
   "sn12.2:2.10": "Sąlygota savinimosi yra būtis.",
   "sn12.2:2.11": "Sąlygotas būties yra gimimas.",
   "sn12.2:2.12": "Sąlygotas gimimo yra senėjimo, mirties, liūdesio, raudojimo, skausmo, nusiminimo ir nevilties radimasis.",
-  "sn12.2:2.13": "Šitaip atsiranda visas šis kančios kalnas."
+  "sn12.2:2.13": "Šitaip atsiranda visas šis kančios kalnas.",
+  "sn12.2:3.1": "Ir kas, vienuoliai, yra senėjimas ir mirtis? "
 }
