Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -20,5 +20,6 @@
   "sn12.2:2.11": "Sąlygotas būties yra gimimas.",
   "sn12.2:2.12": "Sąlygotas gimimo yra senėjimo, mirties, liūdesio, raudojimo, skausmo, nusiminimo ir nevilties radimasis.",
   "sn12.2:2.13": "Šitaip atsiranda visas šis kančios kalnas.",
-  "sn12.2:3.1": "Ir kas, vienuoliai, yra senėjimas ir mirtis? "
+  "sn12.2:3.1": "Ir kas, vienuoliai, yra senėjimas ir mirtis? ",
+  "sn12.2:3.2": "Bet kokių būtybių, esančių bet kokioje būtybių klasėje, senėjimas, senatvė, subyrėję dantys, žilumas, susiraukšlėjimas, gyvybinių jėgų nykimas, gebėjimų silpimas – tai vadinama senėjimu."
 }
