--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -24,5 +24,6 @@
   "sn12.2:3.2": "Bet kokių būtybių, esančių bet kokioje būtybių klasėje, senėjimas, senatvė, subyrėję dantys, žilumas, susiraukšlėjimas, gyvybinių jėgų nykimas, gebėjimų silpimas – ",
   "sn12.2:3.3": "tai vadinama senėjimu.",
   "sn12.2:3.4": "Bet kokių būtybių išnykimas, pranykimas, išėjimas iš bet kokios būtybių klasės, pradingimas, giltinė, mirtis, baigtis, sandų susiskaidymas, griaučių numetimas – ",
-  "sn12.2:3.5": "tai vadinama mirtimi."
+  "sn12.2:3.5": "tai vadinama mirtimi.",
+  "sn12.2:3.6": "Taigi, tai yra senėjimas, o tai yra mirtis. "
 }
