Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -26,5 +26,6 @@
   "sn12.2:3.4": "Bet kokių būtybių išnykimas, pranykimas, išėjimas iš bet kokios būtybių klasės, pradingimas, giltinė, mirtis, baigtis, sandų susiskaidymas, griaučių numetimas – ",
   "sn12.2:3.5": "tai vadinama mirtimi.",
   "sn12.2:3.6": "Taigi, tai yra senėjimas, o tai yra mirtis. ",
-  "sn12.2:3.7": "Tai vadinama senėjimu ir mirtimi."
+  "sn12.2:3.7": "Tai vadinama senėjimu ir mirtimi.",
+  "sn12.2:4.1": "Ir kas, vienuoliai, yra gimimas?"
 }
