--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -27,5 +27,6 @@
   "sn12.2:3.5": "tai vadinama mirtimi.",
   "sn12.2:3.6": "Taigi, tai yra senėjimas, o tai yra mirtis. ",
   "sn12.2:3.7": "Tai vadinama senėjimu ir mirtimi.",
-  "sn12.2:4.1": "Ir kas, vienuoliai, yra gimimas?"
+  "sn12.2:4.1": "Ir kas, vienuoliai, yra gimimas?",
+  "sn12.2:4.2": "Bet kokių būtybių, bet kokioje būtybių klasėje gimimas, gymis, pradėjimas, prigimimas, atgimimas, sandų atsiradimas, patyrimo sričių įgijimas –"
 }
