Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -26,7 +26,7 @@
   "sn12.2:3.4": "Bet kokių būtybių išnykimas, pranykimas, išėjimas iš bet kokios būtybių klasės, pradingimas, giltinė, mirtis, baigtis, sandų susiskaidymas, griaučių numetimas – ",
   "sn12.2:3.5": "tai vadinama mirtimi.",
   "sn12.2:3.6": "Taigi, tai yra senėjimas, o tai yra mirtis. ",
-  "sn12.2:3.7": "Tai vadinama senėjimu ir mirtimi.",
+  "sn12.2:3.7": "Tai, vienuoliai, vadinama senėjimu ir mirtimi.",
   "sn12.2:4.1": "Ir kas, vienuoliai, yra gimimas?",
   "sn12.2:4.2": "Bet kokių būtybių, bet kokioje būtybių klasėje gimimas, gymis, pradėjimas, prigimimas, atgimimas, sandų atsiradimas, patyrimo sričių įgijimas –",
   "sn12.2:4.3": "tai vadinama gimimu."
