Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -29,5 +29,6 @@
   "sn12.2:3.7": "Tai, vienuoliai, vadinama senėjimu ir mirtimi.",
   "sn12.2:4.1": "Ir kas, vienuoliai, yra gimimas?",
   "sn12.2:4.2": "Bet kokių būtybių, bet kokioje būtybių klasėje gimimas, gymis, pradėjimas, prigimimas, atgimimas, sandų atsiradimas, patyrimo sričių įgijimas –",
-  "sn12.2:4.3": "tai, vienuoliai, vadinama gimimu."
+  "sn12.2:4.3": "tai, vienuoliai, vadinama gimimu.",
+  "sn12.2:5.1": "Ir kas yra būtis?"
 }
