Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -31,5 +31,6 @@
   "sn12.2:4.2": "Bet kokių būtybių, bet kokioje būtybių klasėje gimimas, gymis, pradėjimas, prigimimas, atgimimas, sandų atsiradimas, patyrimo sričių įgijimas –",
   "sn12.2:4.3": "tai, vienuoliai, vadinama gimimu.",
   "sn12.2:5.1": "Ir kas yra būtis?",
-  "sn12.2:5.2": "Vienuoliai, yra šios trys būtys: "
+  "sn12.2:5.2": "Vienuoliai, yra šios trys būtys: ",
+  "sn12.2:5.3": "jausminė būtis, subtilios materijos būtis, būtis be materijos. "
 }
