--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -32,5 +32,6 @@
   "sn12.2:4.3": "tai, vienuoliai, vadinama gimimu.",
   "sn12.2:5.1": "Ir kas yra būtis?",
   "sn12.2:5.2": "Vienuoliai, yra šios trys būtys: ",
-  "sn12.2:5.3": "jausminė būtis, subtilios materijos būtis, būtis be materijos. "
+  "sn12.2:5.3": "jausminė būtis, subtilios materijos būtis, būtis be materijos. ",
+  "sn12.2:5.4": "Tai vadinama būtimi."
 }
