--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -33,6 +33,6 @@
   "sn12.2:5.1": "Ir kas yra būtis?",
   "sn12.2:5.2": "Vienuoliai, yra šios trys būtys: ",
   "sn12.2:5.3": "jausminė būtis, subtilios materijos būtis, būtis be materijos. ",
-  "sn12.2:5.4": "Tai vadinama būtimi.",
+  "sn12.2:5.4": "Tai, vienuoliai, vadinama būtimi.",
   "sn12.2:6.1": "Ir kas, vienuoliai, yra savinimasis? "
 }
