Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -34,5 +34,6 @@
   "sn12.2:5.2": "Vienuoliai, yra šios trys būtys: ",
   "sn12.2:5.3": "jausminė būtis, subtilios materijos būtis, būtis be materijos. ",
   "sn12.2:5.4": "Tai, vienuoliai, vadinama būtimi.",
-  "sn12.2:6.1": "Ir kas, vienuoliai, yra savinimasis? "
+  "sn12.2:6.1": "Ir kas, vienuoliai, yra savinimasis? ",
+  "sn12.2:6.2": "Vienuoliai, yra šie keturi savinimaisi: "
 }
