--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -35,5 +35,6 @@
   "sn12.2:5.3": "jausminė būtis, subtilios materijos būtis, būtis be materijos. ",
   "sn12.2:5.4": "Tai, vienuoliai, vadinama būtimi.",
   "sn12.2:6.1": "Ir kas, vienuoliai, yra savinimasis? ",
-  "sn12.2:6.2": "Vienuoliai, yra šie keturi savinimaisi: "
+  "sn12.2:6.2": "Vienuoliai, yra šie keturi savinimaisi: ",
+  "sn12.2:6.3": "juslinių malonumų savinimasis, neteisingų pažiūrų savinimasis, neteisingo ritualų ir įžadų paskirties supratimo savinimasis, tikėjimo į savastį savinimasis."
 }
