Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -37,5 +37,6 @@
   "sn12.2:6.1": "Ir kas, vienuoliai, yra savinimasis? ",
   "sn12.2:6.2": "Vienuoliai, yra šie keturi savinimaisi: ",
   "sn12.2:6.3": "juslinių malonumų savinimasis, neteisingų pažiūrų savinimasis, neteisingo ritualų ir įžadų paskirties supratimo savinimasis, tikėjimo į savastį savinimasis.",
-  "sn12.2:6.4": "Tai, vienuoliai, vadinama savinimusi."
+  "sn12.2:6.4": "Tai, vienuoliai, vadinama savinimusi.",
+  "sn12.2:7.1": "Ir kas, vienuoliai, yra troškimas?"
 }
