Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -39,5 +39,6 @@
   "sn12.2:6.3": "juslinių malonumų savinimasis, neteisingų pažiūrų savinimasis, neteisingo ritualų ir įžadų paskirties supratimo savinimasis, tikėjimo į savastį savinimasis.",
   "sn12.2:6.4": "Tai, vienuoliai, vadinama savinimusi.",
   "sn12.2:7.1": "Ir kas, vienuoliai, yra troškimas?",
-  "sn12.2:7.2": "Vienuoliai, yra šios šešios troškimo rūšys: "
+  "sn12.2:7.2": "Vienuoliai, yra šios šešios troškimo rūšys: ",
+  "sn12.2:7.3": "matomų formų troškimas, garsų troškimas, kvapų troškimas, skonių troškimas, troškimas apčiuopiamo, (proto) reiškinių troškimas. "
 }
