--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -42,5 +42,6 @@
   "sn12.2:7.2": "Vienuoliai, yra šios šešios troškimo rūšys: ",
   "sn12.2:7.3": "matomų formų troškimas, garsų troškimas, kvapų troškimas, skonių troškimas, troškimas apčiuopiamo, (proto) reiškinių troškimas. ",
   "sn12.2:7.4": "Tai, vienuoliai, vadinama troškimu.",
-  "sn12.2:8.1": "Ir kas, vienuoliai, yra jausmo tonas?"
+  "sn12.2:8.1": "Ir kas, vienuoliai, yra jausmo tonas?",
+  "sn12.2:8.2": "Vienuoliai, yra šios šešios jausmo tono rūšys: "
 }
