--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -43,5 +43,6 @@
   "sn12.2:7.3": "matomų formų troškimas, garsų troškimas, kvapų troškimas, skonių troškimas, troškimas apčiuopiamo, (proto) reiškinių troškimas. ",
   "sn12.2:7.4": "Tai, vienuoliai, vadinama troškimu.",
   "sn12.2:8.1": "Ir kas, vienuoliai, yra jausmo tonas?",
-  "sn12.2:8.2": "Vienuoliai, yra šios šešios jausmo tono rūšys: "
+  "sn12.2:8.2": "Vienuoliai, yra šios šešios jausmo tono rūšys: ",
+  "sn12.2:8.3": "jausmo tonas, gimęs dėl sąlyčio su akimi, jausmo tonas, gimęs dėl sąlyčio su ausimi, jausmo tonas, gimęs dėl sąlyčio su nosimi, jausmo tonas, gimęs dėl sąlyčio su liežuviu, jausmo tonas, gimęs dėl sąlyčio su kūnu, jausmo tonas, gimęs dėl sąlyčio su protu. "
 }
