Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -45,5 +45,6 @@
   "sn12.2:8.1": "Ir kas, vienuoliai, yra jausmo tonas?",
   "sn12.2:8.2": "Vienuoliai, yra šios šešios jausmo tono rūšys: ",
   "sn12.2:8.3": "jausmo tonas, gimęs dėl sąlyčio su akimi, jausmo tonas, gimęs dėl sąlyčio su ausimi, jausmo tonas, gimęs dėl sąlyčio su nosimi, jausmo tonas, gimęs dėl sąlyčio su liežuviu, jausmo tonas, gimęs dėl sąlyčio su kūnu, jausmo tonas, gimęs dėl sąlyčio su protu. ",
-  "sn12.2:8.4": "Tai, vienuoliai, vadinama jausmo tonu."
+  "sn12.2:8.4": "Tai, vienuoliai, vadinama jausmo tonu.",
+  "sn12.2:9.1": "Ir kas, vienuoliai, yra sąlytis?"
 }
