--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -48,5 +48,6 @@
   "sn12.2:8.4": "Tai, vienuoliai, vadinama jausmo tonu.",
   "sn12.2:9.1": "Ir kas, vienuoliai, yra sąlytis?",
   "sn12.2:9.2": "Vienuoliai, yra šios šešios sąlyčio rūšys: ",
-  "sn12.2:9.3": "akies sąlytis, ausies sąlytis, nosies sąlytis, liežuvio sąlytis, kūno sąlytis, proto sąlytis. "
+  "sn12.2:9.3": "akies sąlytis, ausies sąlytis, nosies sąlytis, liežuvio sąlytis, kūno sąlytis, proto sąlytis. ",
+  "sn12.2:9.4": "Tai vadinama sąlyčiu."
 }
