--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -49,5 +49,6 @@
   "sn12.2:9.1": "Ir kas, vienuoliai, yra sąlytis?",
   "sn12.2:9.2": "Vienuoliai, yra šios šešios sąlyčio rūšys: ",
   "sn12.2:9.3": "akies sąlytis, ausies sąlytis, nosies sąlytis, liežuvio sąlytis, kūno sąlytis, proto sąlytis. ",
-  "sn12.2:9.4": "Tai vadinama sąlyčiu."
+  "sn12.2:9.4": "Tai vadinama sąlyčiu.",
+  "sn12.2:10.1": "Ir kas, vienuoliai, yra patyrimo srytys? "
 }
