Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -51,5 +51,6 @@
   "sn12.2:9.3": "akies sąlytis, ausies sąlytis, nosies sąlytis, liežuvio sąlytis, kūno sąlytis, proto sąlytis. ",
   "sn12.2:9.4": "Tai vadinama sąlyčiu.",
   "sn12.2:10.1": "Ir kas, vienuoliai, yra patyrimo sritys? ",
-  "sn12.2:10.2": "Akies patyrimo sritis, ausies patyrimo sritis, nosies patyrimo sritis, liežuvio patyrimo sritis, kūno patyrimo sritis, proto patyrimo sritis – "
+  "sn12.2:10.2": "Akies patyrimo sritis, ausies patyrimo sritis, nosies patyrimo sritis, liežuvio patyrimo sritis, kūno patyrimo sritis, proto patyrimo sritis – ",
+  "sn12.2:10.3": "tai, vienuoliai, vadinama šešiomis patyrimo sritimis."
 }
