Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -54,5 +54,6 @@
   "sn12.2:10.2": "Akies patyrimo sritis, ausies patyrimo sritis, nosies patyrimo sritis, liežuvio patyrimo sritis, kūno patyrimo sritis, proto patyrimo sritis – ",
   "sn12.2:10.3": "tai, vienuoliai, vadinama šešiomis patyrimo sritimis.",
   "sn12.2:11.1": "Ir kas, vienuoliai, yra vardas ir pavydalas?",
-  "sn12.2:11.2": "Jausmo tonas, suvokimas, valia, sąlytis, dėmesys –"
+  "sn12.2:11.2": "Jausmo tonas, suvokimas, valia, sąlytis, dėmesys –",
+  "sn12.2:11.3": "tai vadinama vardu. "
 }
