--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -53,7 +53,7 @@
   "sn12.2:10.1": "Ir kas, vienuoliai, yra šešios patyrimo sritys? ",
   "sn12.2:10.2": "Akies patyrimo sritis, ausies patyrimo sritis, nosies patyrimo sritis, liežuvio patyrimo sritis, kūno patyrimo sritis, proto patyrimo sritis – ",
   "sn12.2:10.3": "tai, vienuoliai, vadinama šešiomis patyrimo sritimis.",
-  "sn12.2:11.1": "Ir kas, vienuoliai, yra vardas ir pavydalas?",
+  "sn12.2:11.1": "Ir kas, vienuoliai, yra vardas ir pavidalas?",
   "sn12.2:11.2": "Jausmo tonas, suvokimas, valia, sąlytis, dėmesys –",
   "sn12.2:11.3": "tai vadinama vardu. ",
   "sn12.2:11.4": "Keturi pirminiai (materijos) elementai ir materija, priklausanti nuo jų – "
