--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -56,5 +56,6 @@
   "sn12.2:11.1": "Ir kas, vienuoliai, yra vardas ir pavidalas?",
   "sn12.2:11.2": "Jausmo tonas, suvokimas, valia, sąlytis, dėmesys –",
   "sn12.2:11.3": "tai vadinama vardu. ",
-  "sn12.2:11.4": "Keturi pirminiai (materijos) elementai ir materija, priklausanti nuo jų – "
+  "sn12.2:11.4": "Keturi pirminiai (materijos) elementai ir materija, priklausanti nuo jų – ",
+  "sn12.2:11.5": "tai vadinama pavidalu. "
 }
