Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -59,5 +59,6 @@
   "sn12.2:11.4": "Keturi pirminiai (materijos) elementai ir materija, priklausanti nuo jų – ",
   "sn12.2:11.5": "tai vadinama pavidalu. ",
   "sn12.2:11.6": "Taigi, tai yra vardas, o tai yra pavidalas.",
-  "sn12.2:11.7": "Tai, vienuoliai, vadinama vardu ir pavidalu."
+  "sn12.2:11.7": "Tai, vienuoliai, vadinama vardu ir pavidalu.",
+  "sn12.2:12.1": "Ir kas, vienuoliai, yra sąmonė? "
 }
