--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -60,5 +60,6 @@
   "sn12.2:11.5": "tai vadinama pavidalu. ",
   "sn12.2:11.6": "Taigi, tai yra vardas, o tai yra pavidalas.",
   "sn12.2:11.7": "Tai, vienuoliai, vadinama vardu ir pavidalu.",
-  "sn12.2:12.1": "Ir kas, vienuoliai, yra sąmonė? "
+  "sn12.2:12.1": "Ir kas, vienuoliai, yra sąmonė? ",
+  "sn12.2:12.2": "Vienuoliai, yra šios šešios sąmonės rūšys: "
 }
