Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -61,5 +61,6 @@
   "sn12.2:11.6": "Taigi, tai yra vardas, o tai yra pavidalas.",
   "sn12.2:11.7": "Tai, vienuoliai, vadinama vardu ir pavidalu.",
   "sn12.2:12.1": "Ir kas, vienuoliai, yra sąmonė? ",
-  "sn12.2:12.2": "Vienuoliai, yra šios šešios sąmonės rūšys: "
+  "sn12.2:12.2": "Vienuoliai, yra šios šešios sąmonės rūšys: ",
+  "sn12.2:12.3": "akies sąmonė, ausies sąmonė, nosies sąmonė, liežuvio sąmonė, kūno sąmonė, proto sąmonė."
 }
