--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -64,5 +64,6 @@
   "sn12.2:12.2": "Vienuoliai, yra šios šešios sąmonės rūšys: ",
   "sn12.2:12.3": "akies sąmonė, ausies sąmonė, nosies sąmonė, liežuvio sąmonė, kūno sąmonė, proto sąmonė.",
   "sn12.2:12.4": "Tai, vienuoliai, vadinama sąmone.",
-  "sn12.2:13.1": "Ir kas, vienuoliai, yra valingi veiksmai? "
+  "sn12.2:13.1": "Ir kas, vienuoliai, yra valingi veiksmai? ",
+  "sn12.2:13.2": "Vienuoliai, yra šie trys valingi veiksmai: "
 }
