--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -67,5 +67,6 @@
   "sn12.2:13.1": "Ir kas, vienuoliai, yra valingi veiksmai? ",
   "sn12.2:13.2": "Vienuoliai, yra šie trys valingi veiksmai: ",
   "sn12.2:13.3": "kūno valingi veiksmai, kalbos valingi veiksmai, proto valingi veiksmai.",
-  "sn12.2:13.4": " Tai, vienuoliai, vadinama valingais veiksmais."
+  "sn12.2:13.4": " Tai, vienuoliai, vadinama valingais veiksmais.",
+  "sn12.2:14.1": "Ir kas, vienuoliai, yra neišmanymas?"
 }
