Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -71,5 +71,6 @@
   "sn12.2:14.1": "Ir kas, vienuoliai, yra neišmanymas?",
   "sn12.2:14.2": "Vienuoliai, nežinojimas apie kančią, nežinojimas apie kančios priežastį, nežinojimas apie kančios baigtį, nežinojimas apie kelią, vedantį į kančios baigtį – ",
   "sn12.2:14.3": "tai vadinama neišmanymu.",
-  "sn12.2:15.1": "Tokiu būdu, vienuoliai, sąlygoti neišmanymo yra valingi veiksmai."
+  "sn12.2:15.1": "Tokiu būdu, vienuoliai, sąlygoti neišmanymo yra valingi veiksmai.",
+  "sn12.2:15.2": "Sąlygota valingų veiksmų yra sąmonė …"
 }
