--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -72,5 +72,6 @@
   "sn12.2:14.2": "Vienuoliai, nežinojimas apie kančią, nežinojimas apie kančios priežastį, nežinojimas apie kančios baigtį, nežinojimas apie kelią, vedantį į kančios baigtį – ",
   "sn12.2:14.3": "tai vadinama neišmanymu.",
   "sn12.2:15.1": "Tokiu būdu, vienuoliai, sąlygoti neišmanymo yra valingi veiksmai.",
-  "sn12.2:15.2": "Sąlygota valingų veiksmų yra sąmonė …"
+  "sn12.2:15.2": "Sąlygota valingų veiksmų yra sąmonė …",
+  "sn12.2:15.3": "Šitaip atsiranda visas šis kančios kalnas."
 }
