--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -74,5 +74,6 @@
   "sn12.2:15.1": "Tokiu būdu, vienuoliai, sąlygoti neišmanymo yra valingi veiksmai.",
   "sn12.2:15.2": "Sąlygota valingų veiksmų yra sąmonė …",
   "sn12.2:15.3": "Šitaip atsiranda visas šis kančios kalnas.",
-  "sn12.2:15.4": "Dėl visiško neišmanymo išblėsimo ir baigties baigiasi valingi veiksmai."
+  "sn12.2:15.4": "Dėl visiško neišmanymo išblėsimo ir baigties baigiasi valingi veiksmai.",
+  "sn12.2:15.5": "Dėl valingų veiksmų baigties baigiasi sąmonė …"
 }
