--- a/translation/de/sabbamitta/sutta/sn/sn18/sn18.21_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn18/sn18.21_translation-de-sabbamitta.json
@@ -10,5 +10,5 @@
   "sn18.21:1.6": "jegliche Art von Wahrnehmung … ",
   "sn18.21:1.7": "jegliche Art von Entscheidungen … ",
   "sn18.21:1.8": "jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliches Bewusstsein – man sieht es wahrhaftig mit rechter Weisheit: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
-  "sn18.21:1.9": "Auf diese Art erkennt und sieht man, sodass es kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen mit Bewusstsein versehenen Körper gibt, noch für alle äußeren Reize.“ "
+  "sn18.21:1.9": "Auf diese Art erkennt und sieht man, sodass es kein Sich-Identifizieren, kein Sich-Aneignen und keine zugrunde liegende Neigung zur Einbildung für diesen mit Bewusstsein versehenen Körper gibt, noch für alle äußeren Reize.“ "
 }
